# localstream

./: .gitignore  CMakeLists.txt  README.md  config.json
localstream-web/: package-lock.json  package.json  vite.config.ts
localstream-web/src/: api.ts  app.tsx  index.css  main.tsx  types.ts
localstream-web/src/components/: ContextMenu.tsx  Player.tsx  Sidebar.tsx  ViewAlbums.tsx  ViewHome.tsx  ViewPlaylist.tsx  ViewSearch.tsx  ViewTracks.tsx
localstream-web/src/store/: index.ts
src/: main.cpp  models.hpp
src/api/: ApiRouter.cpp  ApiRouter.hpp  ApiRouter.ipp  AuthMiddleware.hpp  SubsonicRouter.cpp  SubsonicRouter.hpp  SubsonicRouter.ipp  WebHandler.cpp  WebHandler.hpp  WebHandler.ipp
src/config/: AppConfig.cpp  AppConfig.hpp
src/db/: Database.cpp  Database.hpp
src/logger/: Logger.hpp
src/metadata/: MetadataReader.cpp  MetadataReader.hpp
src/scanner/: FileScanner.cpp  FileScanner.hpp  LibraryScanner.cpp  LibraryScanner.hpp
src/streaming/: StreamHandler.cpp  StreamHandler.hpp  StreamHandler.ipp  Transcoder.cpp  Transcoder.hpp
tests/: CMakeLists.txt  test_database.cpp  test_metadata_reader.cpp
